refactor the POST booking feature
